--- a/TuboShop.Data/App.config
+++ b/TuboShop.Data/App.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <connectionStrings>
+    <clear/>
+    <add name="TuboShopConnection" connectionString="Data Source=.;Initial Catalog=TuboShop;Intergrated Security Info=False;User ID=sa;Password=200714; MultipleActiveResultSets=True"/>
+  </connectionStrings>
   <configSections>
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
         <section name="entityFramework"
