--- a/TuboShop.Data/TuboShop.Data.csproj
+++ b/TuboShop.Data/TuboShop.Data.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\FooterRepository.cs" />
+    <Compile Include="Repositories\MenuGroupRepository.cs" />
     <Compile Include="Repositories\MenuRepository.cs" />
     <Compile Include="Repositories\OderDetailRepository.cs" />
     <Compile Include="Repositories\OrderRepository.cs" />
